# rust-baseball-scraper

./: .gitignore  Cargo.toml  README.md
src/: dataframe.rs  get_data.rs  main.rs  schedule.rs
