[package]
name = "baseball_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
scraper = "0.24.0"
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
rayon = "1.7"
indicatif = "0.17"  
polars = { version = "0.52.0", features = ["serde"] }
serde = "1.0.228"
